Fixed some demos titles.

--- a/documentation/demos/demo32/svgpath.html
+++ b/documentation/demos/demo32/svgpath.html
@@ -23,7 +23,7 @@
         </div>
         <div id="experiment">
             <div style="text-align:center">
-                <h1>Path Segments</h1>
+                <h1>SVG Parser</h1>
             </div>
             <div id="experiment-holder">
                 <canvas id="experiment-canvas"></canvas>
