--- a/documentation/demos/demo33/keyframing.html
+++ b/documentation/demos/demo33/keyframing.html
@@ -36,7 +36,7 @@
         </div>
         <div id="experiment">
             <div style="text-align:center">
-                <h1>Path Segments</h1>
+                <h1>On-the-fly CSS3 Keyframing</h1>
             </div>
             <div id="experiment-holder">
                 <div class="element">ABCD</div>
