--- a/documentation/demos/demo34/index.html
+++ b/documentation/demos/demo34/index.html
@@ -25,7 +25,7 @@
         </div>
         <div id="experiment">
             <div style="text-align:center">
-                <h1>Path Segments</h1>
+                <h1>Skeletal animation</h1>
             </div>
             <div id="experiment-holder">
                 <canvas id="canvas"></canvas>
