--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -10,42 +10,44 @@
 </head>
 <body>
 <h1>Demos</h1>
-<ul>
-    <li><a href="demo1/path_org.html">Path management</a></li>
-    <li><a href="demo2/fishpond_org.html">Fish Pond</a></li>
-    <li><a href="demo3/sprites_org.html">Sprites on Path</a></li>
-    <li><a href="demo4/coordinates_org.html">Drag'n'Drop</a></li>
-    <li><a href="demo5/text-on-path_org.html">Text on Path</a></li>
-    <li><a href="demo6/accelerometer_org.html">Accelerometer</a></li>
-    <li><a href="demo7/anchors_org.html">Transform anchors</a></li>
-    <li><a href="demo8/hierarchy_org.html">Hierarchy</a></li>
-    <li><a href="demo26/hierarchy2.html">Hierarchy II</a></li>
-    <li><a href="demo9/behaviors_org.html">Interactivity</a></li>
-    <li><a href="demo10/garden_org.html">Procedural Grass</a></li>
-    <li><a href="demo11/circles_org.html">Collision detection</a></li>
-    <li><a href="demo12/box2d_org.html">Box2D</a></li>
-    <li><a href="demo12+1/transitions_org.html">Scene Transitions</a></li>
-    <li><a href="demo14/timers_org.html">Timers</a></li>
-    <li><a href="demo15/logofrenzy_org.html">SpriteImage</a></li>
-    <li><a href="demo16/mask_org.html">Masking</a></li>
-    <li><a href="demo17/video_org.html">Video Tag</a></li>
-    <li><a href="demo18/keys_org.html">Keyboard management</a></li>
-    <li><a href="demo19/collision.html">Collision detection</a></li>
-    <li><a href="demo20/flightcontrol.html">Flight control</a></li>
-    <li><a href="demo21/vvv.html">Tiles engine</a></li>
-    <li><a href="demo22/multitouch.html">Multitouch</a></li>
-    <li><a href="demo23/actionTo.html">Action To</a></li>
-    <li><a href="demo24/path.html">Path compositing</a></li>
-    <li><a href="demo25/flipcards.html">Flip cards</a></li>
-    <li><a href="demo27/font.html">CAAT.Font</a></li>
-    <li><a href="demo28/paint.html">Paint</a></li>
-    <li><a href="demo29/layout2.html">Auto Layout</a></li>
-    <li><a href="demo30/fonts.html">Text Actor</a></li>
-    <li><a href="demo31/sprites.html">Sprite Management</a></li>
-    <li><a href="demo32/svgpath.html">SVG Path parser</a></li>
-    <li><a href="demo33/keyframing.html">@key-frames</a></li>
 
-</ul>
+<div syle="maring:10px;">
+    <a href="demo34/index.html"><img class="image_h" src="thumbs/demo34.png" alt="Skeletal animation"></a>
+    <a href="demo31/sprites.html"><img class="image_h" src="thumbs/demo31.png" alt="Sprites control"></a>
+    <a href="demo1/path_org.html"><img class="image_h" src="thumbs/demo1.png" alt="Path management"></a>
+    <a href="demo2/fishpond_org.html"><img class="image_h" src="thumbs/demo2.png" alt="Procedural fishpond"></a>
+    <a href="demo3/sprites_org.html"><img class="image_h" src="thumbs/demo3.png" alt="Sprites traversing a random path"></a>
+    <a href="demo4/coordinates_org.html"><img class="image_h" src="thumbs/demo4.png" alt="Pixel perfect collistion detection with mouse"></a>
+    <a href="demo5/text-on-path_org.html"><img class="image_h" src="thumbs/demo5.png" alt="Sprites traversing a random path"></a>
+    <a href="demo6/accelerometer_org.html"><img class="image_h" src="thumbs/demo6.png" alt="accelerometer input"></a>
+    <a href="demo7/anchors_org.html"><img class="image_h" src="thumbs/demo7.png" alt="Actor anchors"></a>
+    <a href="demo8/hierarchy_org.html"><img class="image_h" src="thumbs/demo8.png" alt="Hierarchical rotations"></a>
+    <a href="demo26/hierarchy2.html"><img class="image_h" src="thumbs/demo26.png" alt="Hierarchy II"></a>
+    <a href="demo9/behaviors_org.html"><img class="image_h" src="thumbs/demo9.png" alt="Some actor behaviors"></a>
+    <a href="demo10/garden_org.html"><img class="image_h" src="thumbs/demo10.png" alt="Procedural grass"></a>
+    <a href="demo11/circles_org.html"><img class="image_h" src="thumbs/demo11.png" alt="Circles collision"></a>
+    <a href="demo12/box2d_org.html"><img class="image_h" src="thumbs/demo12.png" alt="Box2D integration"></a>
+    <a href="demo12+1/transitions_org.html"><img class="image_h" src="thumbs/demo13.png" alt="Scene transitions"></a>
+    <a href="demo14/timers_org.html"><img class="image_h" src="thumbs/demo14.png" alt="Scene timers"></a>
+    <a href="demo15/logofrenzy_org.html"><img class="image_h" src="thumbs/demo15.png" alt="SpriteImage demo"></a>
+    <a href="demo16/mask_org.html"><img class="image_h" src="thumbs/demo16.png" alt="Masking"></a>
+    <a href="demo17/video_org.html"><img class="image_h" src="thumbs/demo17.png" alt="Video playback and manipullation"></a>
+    <a href="demo18/keys_org.html"><img class="image_h" src="thumbs/demo18.png" alt="Keyboard demo"></a>
+    <a href="demo19/collision.html"><img class="image_h" src="thumbs/demo19.png" alt="Quadtree based collision"></a>
+    <a href="demo20/flightcontrol.html"><img class="image_h" src="thumbs/demo20.png" alt="Flightcontrol like demo"></a>
+    <a href="demo21/vvv.html"><img class="image_h" src="thumbs/demo21.png" alt="TileMap engine preview"></a>
+    <a href="demo22/multitouch.html"><img class="image_h" src="thumbs/demo22.png" alt="Multitouch test"></a>
+    <a href="demo23/actionTo.html"><img class="image_h" src="thumbs/demo23.png" alt="Action To"></a>
+    <a href="demo24/path.html"><img class="image_h" src="thumbs/demo24.png" alt="Path Creation"></a>
+    <a href="demo25/flipcards.html"><img class="image_h" src="thumbs/demo25.png" alt="Flip cards"></a>
+    <a href="demo27/font.html"><img class="image_h" src="thumbs/demo27.png" alt="Fonts"></a>
+    <a href="demo28/paint.html"><img class="image_h" src="thumbs/demo28.png" alt="Paint demo"></a>
+    <a href="demo29/layout2.html"><img class="image_h" src="thumbs/demo29.png" alt="Auto Layout"></a>
+    <a href="demo30/fonts.html"><img class="image_h" src="thumbs/demo30.png" alt="UI.TextActor vs drawString"></a>
+    <a href="demo32/svgpath.html"><img class="image_h" src="thumbs/demo32.png" alt="SVG Parser"></a>
+    <a href="demo33/keyframing.html"><img class="image_h" src="thumbs/demo33.png" alt="CSS3 @KeyFrames"></a>
+
+</div>
 
 </body>
 </html>
