Added demos to menu.html

--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -14,6 +14,8 @@
 <ul>
     <li><a href="../demo34/index.html">Skeletal animation</a></li>
     <li><a href="../demo31/sprites.html">Sprite Management</a></li>
+    <li><a href="../demo35/label.html">Multiline text</a></li>
+    <li><a href="../demo36/spritemap.html">Atlas Bitmap</a></li>
     <li><a href="../demo12/box2d_org.html">Box2D</a></li>
     <li><a href="../demo1/path_org.html">Path management</a></li>
     <li><a href="../demo2/fishpond_org.html">Fish Pond</a></li>
@@ -46,8 +48,6 @@
     <li><a href="../demo30/fonts.html">Text Actor</a></li>
     <li><a href="../demo32/svgpath.html">SVG Path parser</a></li>
     <li><a href="../demo33/keyframing.html">@key-frames</a></li>
-    <li><a href="../demo35/label.html">Multiline text</a></li>
-    <li><a href="../demo36/spritemap.html">Sprite Maps</a></li>
 
 </ul>
        
