Added demos 35 and 36

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 
         <h3>Samples</h3>
         <div>
+            <a href="documentation/demos/demo34/index.html"><img class="image_h" src="thumbs/demo34.png" alt="Skeletal animation"></a>
+            <a href="documentation/demos/demo31/dude.html"><img class="image_h" src="thumbs/demo31.png" alt="Sprite Animations"></a>
+            <a href="documentation/demos/demo35/label.html"><img class="image_h" src="thumbs/demo35.png" alt="Multiline text"></a>
+            <a href="documentation/demos/demo36/spritemap.html"><img class="image_h" src="thumbs/demo36.png" alt="Atlas Bitmap"></a>
             <a href="documentation/demos/demo1/path_org.html"><img class="image_h" src="thumbs/demo1.png" alt="Path management"></a>
             <a href="documentation/demos/demo2/fishpond_org.html"><img class="image_h" src="thumbs/demo2.png" alt="Procedural fishpond"></a>
             <a href="documentation/demos/demo3/sprites_org.html"><img class="image_h" src="thumbs/demo3.png" alt="Sprites traversing a random path"></a>
@@ -92,10 +96,8 @@
             <a href="documentation/demos/demo28/paint.html"><img class="image_h" src="thumbs/demo28.png" alt="Paint demo"></a>
             <a href="documentation/demos/demo29/layout2.html"><img class="image_h" src="thumbs/demo29.png" alt="Auto Layout"></a>
             <a href="documentation/demos/demo30/fonts.html"><img class="image_h" src="thumbs/demo30.png" alt="UI.TextActor vs drawString"></a>
-            <a href="documentation/demos/demo31/sprites.html"><img class="image_h" src="thumbs/demo31.png" alt="Sprites control"></a>
             <a href="documentation/demos/demo32/svgpath.html"><img class="image_h" src="thumbs/demo32.png" alt="SVG Parser"></a>
             <a href="documentation/demos/demo33/keyframing.html"><img class="image_h" src="thumbs/demo33.png" alt="CSS3 @KeyFrames"></a>
-            <a href="documentation/demos/demo34/index.html"><img class="image_h" src="thumbs/demo34.png" alt="Skeletal animation"></a>
 
         </div>
 
