--- a/documentation/demos/demo4/coordinates_org.html
+++ b/documentation/demos/demo4/coordinates_org.html
@@ -12,8 +12,8 @@
 
 <div id="page">
     <div id="header">
-        <div style="text-align: center;">
-
+        <div style="text-align: center; font-size: 20px">
+            Select renderer: <a href="coordinates_org.html?renderer=canvas">Canvas</a> <a href="coordinates_org.html?renderer=webgl">WebGL</a> <a href="coordinates_org.html?renderer=css">CSS</a> 
         </div>
     </div>
 
@@ -26,7 +26,6 @@
                 <h1>Homogeneous coordinates</h1>
             </div>
             <div id="experiment-holder">
-                <canvas id="experiment-canvas"></canvas>
             </div>
             <div id="experiment-description">
                 <div>
@@ -98,6 +97,34 @@
 
     (function() {
 
+        function getRequestParameter(name) {
+            if (name=(new RegExp('[?&]'+encodeURIComponent(name)+'=([^&]*)')).exec(location.search))
+                return decodeURIComponent(name[1]);
+        }
+        var renderer = getRequestParameter('renderer');
+        var modulesToLoad;
+        if (renderer === "css") {
+            modulesToLoad = [
+                        "CAAT.Foundation.Director",
+                        "CAAT.Foundation.ActorCSS",
+                        "CAAT.Foundation.ActorContainerCSS",
+                        "CAAT.Foundation.UI.TextActor",
+                        "CAAT.Behavior.Interpolator",
+                        "CAAT.Behavior.RotateBehavior"
+            ];
+            CAAT.__CSS__=1;
+        }
+        else {
+            modulesToLoad = [
+                        "CAAT.Foundation.Director",
+                        "CAAT.Foundation.Actor",
+                        "CAAT.Foundation.ActorContainer",
+                        "CAAT.Foundation.UI.TextActor",
+                        "CAAT.Behavior.Interpolator",
+                        "CAAT.Behavior.RotateBehavior"
+            ];
+        }
+
         window.addEventListener('load',load,false);
 
         function load() {
@@ -114,15 +141,7 @@
                     setModulePath("CAAT.WebGL",             "WebGL").
 
                 // get modules, and solve their dependencies.
-                    bring(
-                    [
-                        "CAAT.Foundation.Director",
-                        "CAAT.Foundation.Actor",
-                        "CAAT.Foundation.ActorContainer",
-                        "CAAT.Foundation.UI.TextActor",
-                        "CAAT.Behavior.Interpolator",
-                        "CAAT.Behavior.RotateBehavior"
-                    ]).
+                    bring(modulesToLoad).
 
                 // this function will be firer every time all dependencies have been solved.
                 // if you call again bring, this function could be fired again.
@@ -131,7 +150,27 @@
 
         function __coordinates() {
 
-            var director= new CAAT.Foundation.Director().initialize( 800,500,'experiment-canvas' );
+            var container = document.getElementById("experiment-holder");
+            var director;
+            var container;
+            if (renderer === 'css') {
+                console.log("Using css renderer");
+                canvas = document.createElement("div");
+                container.appendChild(canvas);
+                director= new CAAT.Foundation.Director().initialize(800,500,canvas);
+            }
+            else if (renderer === 'webgl') {
+                console.log("Using WebGL renderer");
+                canvas = document.createElement("canvas");
+                container.appendChild(canvas);
+                director= new CAAT.Foundation.Director().initializeGL(800,500,canvas);
+            }
+            else {
+                console.log("Using canvas renderer");
+                canvas = document.createElement("canvas");
+                container.appendChild(canvas);
+                director= new CAAT.Foundation.Director().initialize(800,500,canvas);
+            }
             var scene= director.createScene();
 
 
