Adding mouse wheel

--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -46,6 +46,7 @@
     <a href="demo30/fonts.html"><img class="image_h" src="thumbs/demo30.png" alt="UI.TextActor vs drawString"></a>
     <a href="demo32/svgpath.html"><img class="image_h" src="thumbs/demo32.png" alt="SVG Parser"></a>
     <a href="demo33/keyframing.html"><img class="image_h" src="thumbs/demo33.png" alt="CSS3 @KeyFrames"></a>
+    <a href="demo37/mouseWheel.html"><img class="image_h" src="thumbs/demo37.png" alt="Pan Zoom with mouse wheel"></a>
 
 </div>
 
