Mouse wheel integration, demo, minor comments and tutorial corrections

--- a/documentation/tutorials/02_CAAT_Foundation_Actor.html
+++ b/documentation/tutorials/02_CAAT_Foundation_Actor.html
@@ -95,12 +95,12 @@
     <h2>More info on CAAT.Actor class</h2>
     <p>
         <a href="02_CAAT_Foundation_Actor_Events.html">Events</a><br>
-        <a href="t2-2.html">Lifecycle</a><br>
-        <a href="t2-3.html">Transformations</a><br>
-        <a href="t2-4.html">Behaviors</a><br>
-        <a href="t2-5.html">Background Image</a><br>
+        <a href="02_CAAT_Foundation_Actor_LifeCycle.html">Lifecycle</a><br>
+        <a href="02_CAAT_Foundation_Actor_Transformations.html">Transformations</a><br>
+        <a href="02_CAAT_Foundation_Actor_Behaviors.html">Behaviors</a><br>
+        <a href="02_CAAT_Foundation_Actor_BgImages.html">Background Image</a><br>
         <a href="t2-6.html">Paint method</a><br>
-        <a href="t2-7.html">Caching</a><br>
+        <a href="02_CAAT_Foundation_Actor_CacheAsBitmap.html">Caching</a><br>
     </p>
 </div>
 
