--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -48,10 +48,11 @@
     <li><a href="../demo30/fonts.html">Text Actor</a></li>
     <li><a href="../demo32/svgpath.html">SVG Path parser</a></li>
     <li><a href="../demo33/keyframing.html">@key-frames</a></li>
+    <li><a href="../demo37/mouseWheel.html">mouseWheel</a></li>
 
 </ul>
        
 <h1>Tutorial</h1>
 <ul>
-    <li><a href="../../tutorials/t0.html">Tutorials</a></li>
+    <li><a href="../../tutorials/00_Structure.html">Tutorials</a></li>
 </ul>
