broken link in sidebar menu

--- a/documentation/tutorials/menu/menu.html
+++ b/documentation/tutorials/menu/menu.html
@@ -1,6 +1,6 @@
 <h1>Tutorial</h1>
 <ul>
-    <li><a href="t0.html">Index</a></li>
+    <li><a href="index.html">Index</a></li>
 
     <li><a href="01_getting_started.html">Getting Started</a></li>
 
